Bug/billing doesnt commit tokens on complition (#145)
* Refactor billing services to use InternalBillingService

- Replaced instances of BillingService with InternalBillingService in AiQuizGenerationServiceImpl and QuizServiceImpl for improved billing operation handling.
- Updated method calls to utilize the new InternalBillingService interface, ensuring consistent billing logic across services.
- Enhanced unit tests to mock InternalBillingService, ensuring proper verification of billing operations during quiz generation and job processing.
- Adjusted application properties to enable billing features, enhancing overall functionality and user experience.

* Enhance quiz generation error handling and testing

- Added an exception throw in AiQuizGenerationServiceImpl when no questions are generated, improving error feedback for job failures.
- Introduced new unit tests in BillingSweeperTest and QuizServiceReservationTest to cover scenarios for handling expired reservations and zero-balance details during quiz generation.
- Enhanced QuizServiceImplBillingDelegationTest with multiple scenarios for token commitment, including exact usage, under-usage, and over-usage, ensuring robust billing operations.
- Improved test coverage for quiz generation processes, ensuring proper handling of user-specific reservations and error scenarios.

* Update test configurations and enhance integration tests

- Excluded RealAiStripeEndToEndIntegrationTest from build to streamline test execution.
- Updated TestAiConfig to support a new profile for excluding real AI tests during certain environments.
- Enhanced quiz generation integration tests to cover various scenarios, including billing and token management.
- Added comprehensive integration tests for Stripe interactions, ensuring robust handling of payment processes and webhook events.
- Improved application test properties to include environment variable imports for better configuration management.

* Refactor quiz generation flow to us